_archive/desktop-sync/1.0/references/ds-faqs42.md
---
author: Alfresco Documentation
source: 
audience: 
category: Development
option: Transform
---

# Desktop Sync FAQs

Here's a list of common questions about Desktop Sync.

**Initial sync and normal sync**

-   [So, what gets synced?](ds-faqs42.md#1)
-   [Can I use Desktop Sync during initial sync?](ds-faqs42.md#5)
-   [Will syncing happen while I am offline?](ds-faqs42.md#6)
-   [Where can I find my synced files?](ds-faqs42.md#15)
-   [How many folder levels can I sync?](ds-faqs42.md#22)
-   [Can I cancel initial sync?](ds-faqs42.md#21)

**Normal Sync**

-   [I made changes to a local file that aren't showing in Alfresco.](ds-faqs42.md#2)
-   [What's the *orphaned* folder in my local synced drive?](ds-faqs42.md#3)
-   [If a file is checked out by another user in Alfresco, can I update it?](ds-faqs42.md#7)
-   [When will a deferred file be synced?](ds-faqs42.md#8)
-   [I see a red cross on my system tray. What does that mean?](ds-faqs42.md#9)
-   [Do I need to restart Desktop Sync when I restart my machine?](ds-faqs42.md#10)
-   [Can I use Desktop Sync while I am offline?](ds-faqs42.md#11)
-   [What happens to a file/ folder which is moved out of Alfresco folder on my desktop?](ds-faqs42.md#14)
-   [Why can't I see status icons on my files and folders?](ds-faqs42.md#19)
-   [What happens if two Alfresco sites have the same name?](ds-faqs42.md#25)
-   [What happens if the site name is invalid or contains unsupported Windows characters?](ds-faqs42.md#26)

**Install and uninstall**

-   [How do I uninstall Desktop Sync?](ds-faqs42.md#16)
-   [Can Desktop Sync be installed in an unattended mode?](ds-faqs42.md#17)
-   [Can I setup Desktop Sync using a central installation process?](ds-faqs42.md#18)
-   [Upon unselecting files and folders from Choose folders and sites to sync screen not all files are getting removed. What's wrong??](ds-faqs42.md#23)

**Manage sites, files, and folders**

-   [Where do I find the Desktop Sync log file?](ds-faqs42.md#4)
-   [I no longer need a site. How do I remove the site and its contents from my desktop?](ds-faqs42.md#20)
-   [Will my files be versioned in Alfresco?](ds-faqs42.md#12)
-   [Can I recover a deleted file using Desktop Sync?](ds-faqs42.md#13)
-   [I have changed the site name in Alfresco. Can I continue using Desktop Sync?](ds-faqs42.md#24)
-   [Which file extensions are supported by Desktop Sync?](ds-faqs42.md#30)
-   [If a file has a file extension which is in the exempted list above, how can I include that file in the sync set?](ds-faqs42.md#31)
-   [What files should be backed up/restored on the client ?](ds-faqs42.md#32)

**So, what gets synced?**

Desktop Sync shows you all your Alfresco sites and folders which you have access to, plus your My Files and Shared Files content. You can select any \(or all\) of these and click **Sync** to create a local copy of the content on your computer.

Individual files you've favorited aren't displayed and can be synced directly, you need to sync the folder they're in.

Whenever you update any of this local content \(which includes adding, moving, and deleting files and folders within the synced area\) these changes will automatically be replicated on Alfresco.

Whenever you or anyone else make changes in Alfresco to sites or folders that you've synced with, then these changes will be replicated in your local content.

**Note:** Some temporary files don't get synced. These include, but aren't limited to \*.tmp, \*.temp, desktop.ini, \*.~, and Thumbs.db files. You can configure the file types you don't want to be synced in AlfrescoSync.config. For more information, see [Client configuration](../concepts/ds-working.md).

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can I use Desktop Sync during initial sync?**

Yes. During initial sync, a content created on your desktop will be synced only after the initial sync is over.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Will syncing happen while I am offline?**

Sync needs Internet. Syncing will resume when Internet connection is restored.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Where can I find my synced files?**

The content is synced at C:\\Users\\<username\>\\Alfresco. The Alfresco folder can also be found in the File Explorer under **Favourites**.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**How many folder levels can I sync?**

You can sync as many folder levels but the maximum length for a path should not be more than 260 characters. This is a limitation of the Windows File System.

For more information see [Maximum Path Length Limitation](https://msdn.microsoft.com/en-us/library/windows/desktop/aa365247(v=vs.85).aspx#maxpath).

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can I cancel initial sync?**

Yes. As a Desktop Sync user, you can either:

-   Take your machine offline: You can simply ignore initial sync and shut down your machine or disconnect the network. Initial sync will resume when connection is restored.
-   Keep your machine running but discontinue initial sync: You can quit Desktop Sync and initial sync will resume when restart Desktop Sync.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**I made changes to a local file that aren't showing in Alfresco.**

It can be due to internet connection problems, Alfresco connection problems, or synchronization service connection problems; contact your Alfresco Administrator.

By default changes made to content in Alfresco take five minutes to be synced to your local version, but changes to local files are synced to Alfresco immediately.

If you've made changes locally that are showing in Alfresco, then make sure that you haven't accidentally closed down Desktop Sync by confirming that the ![Menu bar](../images/ico-ds-alfresco.png) icon is showing in the system tray \(Windows\) or menu bar \(Mac\).

It's also possible that someone was updating the content in Alfresco at the same time as you were updating the local content. The file is in conflict state. See Conflict metrics on how to resolve the conflict.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**What's the *orphaned* folder in my local synced drive?**

If you deselect synced content in Desktop Sync and click **Sync**, then you're effectively breaking the link between local content and Alfresco content.

The content won't be synced any more. Files that were not synced to Alfresco due to conflict or deferred can be found in *orphaned* folder. This folder is automatically created in your synced area and the previously synced content is moved to there.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**If a file is checked out by another user in Alfresco, can I update it?**

Yes, you can update the file but your updates will not synced to Alfresco unless the file is checked-in. The file will go to a deferred state.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**When will a deferred file be synced?**

First you need to find the reason why the file is in a deferred state. The file can be in a deferred state for the following reasons.

-   When you don't have free space on your desktop.
-   If you have an Office file open and you are saving it to your local.

Resolve the issue and your file will be synced automatically.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**I see a red cross on my system tray. What does that mean?**

See [Working with Desktop Sync](../concepts/ds-working.md)

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Do I need to restart Desktop Sync when I restart my machine?**

No, Desktop Sync is automatically started when your machine starts.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can I use Desktop Sync while I am offline?**

You can continue working on your files offline but they will get synced to Alfresco whenever you have an Internet connection.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**What happens to a file/ folder which is moved out of Alfresco folder on my desktop?**

The moved file or folder is deleted in Alfresco.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Why can't I see status icons on my files and folders?**

Windows has a limit of 15 icon overlay handlers, some of which are reserved by the system. The number of different icon overlay handlers is limited by the amount of space available for icon overlays in the system image list. So, uninstalling other applications that use system overlays could make some slots available for Desktop Sync icon overlays.

Additionally, check if you have accidentally quit Desktop Sync. Upon restart, the icons should be restored.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**What happens if two Alfresco sites have the same name?**

If the site name is duplicate, one of the site name will be displayed as SiteName\_01, for example, Test Site\_01.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**What happens if the site name is invalid or contains unsupported Windows characters?**

In Windows, a file name cannot contain the following characters: `\ / : * ? " < >`. Desktop Sync replaces these characters by underscores, for example, Test\>test will be replaced as Test\_test on your desktop.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**How do I uninstall Desktop Sync?**

1.  Open **Programs and Features** by clicking **Start**.
2.  Click **Control Panel**.
3.  Under **Programs**, click **Uninstall a program**.
4.  Select Desktop Sync, and then click **Uninstall**.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can Desktop Sync be installed in an unattended mode?**

Yes.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can I setup Desktop Sync using a central installation process?**

Yes, Desktop Sync installer contains an MSI, which can be used with any central installation tool, such as Microsoft System Center Configuration Manager.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Upon unselecting not all files are getting removed. What's wrong?**

When a file of folder is locked by Windows File Explorer, applications, like Desktop Sync, can not remove that file and folder. In that case, when unsubscribing content or removing the application, some files and folders maybe left behind. They should be removed manually.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Where do I find the Desktop Sync log file?**

If you're having any issues with Desktop Sync then your Alfresco Administrator might ask you to provide the log file.

You can find the log file in the following locations, but be aware that it's a hidden file. If you don't know how to view hidden files then your Alfresco Administrator can help you.

-   Windows - C:\\Users\\Administrator\\AppData\\Local\\AlfrescoSync.log

Additionally, you can use applications, such as DebugView to monitor debug output on your computer. To use DebugView, follow the steps below:

1.  Download and install [DebugView](https://technet.microsoft.com/en-us/sysinternals/debugview.aspx).

    DebugView will immediately start capturing debug output.

2.  On the top menu bar, click **Edit** and then **Filter/Highlight...**.

    The **DebugView Filter** window appears.

3.  To filter and display only the output from the shell extension, specify `AlfrescoSyncExtension` in **Include** and click **OK**.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**I no longer need a site. How do I remove the site and its contents from my desktop?**

Go to **Manage Folders...** and deselect the sites you no longer need. Click **Sync** to remove the selected files and folders from your desktop.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can I use Desktop Sync while I am offline?**

You can continue working on your files offline but they will get synced to Alfresco whenever you have an Internet connection.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Will syncing happen while I am offline?**

Sync needs Internet. Syncing will resume when Internet connection is restored.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Will my files be versioned in Alfresco?**

Yes. All files synced in Alfresco using Desktop Sync are versioned.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Can I recover a deleted file using Desktop Sync?**

Yes. Any file deleted in Alfresco using Desktop Sync is moved to Alfresco trash can.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**I have changed the site name in Alfresco. Can I continue using Desktop Sync?**

Yes, you can continue working with Desktop Sync but the site name won't be updated in the File Explorer.

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**Which file extensions are supported by Desktop Sync?**

Desktop Sync syncs all file extensions except for the temporary file extensions mentioned in the table below:

|part|thumbdata3--1967290299|thumbdata3--1763508120|crdownload|~cr|exo|tmp|cvr|download|thumbdata3--number|mxdl|tt2|etl|egt|
|csi|thumbdata5--1763508120\_0|csd|fseventsd-uuid|localstorage-journal|thumbdata5--1967290299\_0|dwl|laccdb|torchdownload|thumbdata5|cache|lck|ewc2|!ut|
|regtrans-ms|blf|mmsyscache|sfk|filepart|imgcache|dtapart|sav|aaa|thumbdata|h64|lock|rra|bc|
|npk|download|adadownload|hex|tec|chkn|steamstart|partial|thumbdata5--1967290299\_1|pnf|idlk|lrd|thumbdata5-1763508120\_1|fb!|
|temp|waf|tmt|dlm|bu|swo|rcv|reapeaks|dap|pkf|fsf|thumbdata3-1763508120|dmp|db-wal|
|pft|little|\_501|glh|db-shm|box|cfa|installstate|tv5|tbn|sqlite-journal|dat|thumbdata3-1967290299|onecache|
|msj|exd|isl|objectcache|nov|dca|thumbdata4--1967290299|swn|rld|temporaryitems|aso|thumbdata5--1967290299\_3|rsc\_tmp|bdm|
|ptn2|indexarrays|id3tag|thumbdata3|cos2|dia|download|cah|wfm|as$|meb|clp|thumbdata5-1763508120\_2|thumbdata4--1763508120|
|save|heu|nb2|tof|thumbdata5-1763508120\_3|bc!|snapdoc|hrd|rsx|\)2\(|cache-2|prmdc|bridgecachet|tmd|
|fuse\_hidden|db3-journal|phc|rdn|ims|cache-3|bsd|thumbdata4|ytf|4sh|tic|hax|buf|init|
|cdc|bmc|sqlite3-journal|indexpositions|bts|db|wov|dinfo|indexcompactdirectory|bmb|crc|citriodownload|pkc|pm$|
|shadowindexgroups|dtf|peb|bom|oemigaccount|utpart|lai|m\_p|md0|bdi|00a|appdownload|inprogress|mbc|
|mex|qbi|help|tombstone|csstore|adm|qbt|xp|hmap|@@2|indexdirectory|yumtx|@@1|thumbdata5--1967290299\_4|
|bridgecache|thumbdata5--1967290299\_5|zoner-rawdata-cache|wcc|tst|000|ci|onetmp|indexpositiontable|stf|identcache|qdat|out|inf|
|shadowindextermids|adblock|filetablelock|wpk|thumbdata5-1967290299\_8|xcuserstate|tv2|aria2|mx1|002|ilp|bv4|par|alt|
|nc2|a$v|ddat|cpd|escopy|ipe\_tempfile|mpgindex|bv1|tv4|$db|db$|pat|bphys|wa~|
|clean|thumbdata5--1967290299\_7|^fsf|xps~|sss~|chk|iniis|moz|---|bt0|fts|tv7|wlx|nmu|
|swd|dov|bde|~$~|~nt|vsscc|jnk|abc|tv3|thumbdata5-1763508120\_6|wsb|dmsk|fes|shadowindexcompactdirectory|
|ird|thumbdata5-1763508120\_5|qtindex|bv2|svn-work|pzx|$ed|tv1|rad|thumbdata5-1763508120\_4|thumbdata5-1763508120\_0|$vm|thumbdata5-1763508120\_7|compo|
|preview7|asab|$$$|pls|pet|001|wtmp|lockfile|ger|tb0|pfc|\(d\)|zoner-index-cache|qp1|
|blk|zsr|mtx|wid|ipl22|tv6|vdjcache|xp~|lex|xps|cachedmsg|bv3|f2l|lst|
|4sw|wtmp|mov|iff|\#$\#|vmdk-converttmp|bv7|t44|dw3|zl|nav2|bv5|bsi|ccc|
|asx|ipl|sdx|u96|dir00|qp2|qtmp|s2mi|fdpart|t$m|hmap.dir|journal|spc|als|
|simpl\_int|r1m|scuf|dem|patchcache|ers|csac|sfm|thumbdata5-1763508120\_8|cnv|vmc|file|s|m|
|met|mpx|tv8|zn~|thumbdata5-1763508120\_20|cdt|db$|thumbdata5-1763508120\_12|ebktml|bv6|tv9|bv8|vaf|thumbnail|
|ref|\#\#\#|pspcache|c1s|muf|onlineresources|memb|w44|§§§|dir|lvl|bcm|$a|bv9|
|fchc|rgt|ncch|grbdropfile|wrk|cached\_icon|thumbdata5-1763508120\_17|aecache|mdccache|thumbdata5-1763508120\_19|lref|1|0| |

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**If a file has a file extension which is in the exempted list above, can I include that file in the sync set?**

Yes. In the <userHome\>\\AppData\\Local\\Alfresco\\AlfrescoSync.conf file, in the Sync constraints section, update the syncmanager.constraint.1=FileExt\|.tmp,.temp property

[back to top](ds-faqs42.md#)

![](../images/hr.png)

**What files should be backed up/restored on the client ?**

You can find the synced data in the C:\\Users\\<username\>\\Alfresco folder. The sync client settings/database/logs can be found in the C:\\Users\\<username\>\\AppData\\Local\\Alfresco folder.

When the sync client starts up, it uses the modification time stamp from the AlfrescoSync.time file in the AppData\\Local\\Alfresco folder to check if any files/folders were changed while Desktop Sync was not running. If you delete and recreate the AlfrescoSync.time file after restoring the Desktop Sync data and settings, it would do a full scan of the local and remote folders.

[back to top](ds-faqs-admin.md#)

**Parent topic:**[Using Desktop Sync](../concepts/desktopsync-using.md)

